<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presenter.ui.base.MainActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/check_emi_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/calculate_emi"
                app:tint="#D74879" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_your_emi_amount"
                android:textSize="@dimen/twentyTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_emi_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/loan_amount" />

                    <TextView
                        android:text="@string/_5000"
                        android:id="@+id/loan_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/amount_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="5000"
                    android:max="100000"
                    android:progressTint="#D74879"
                    android:thumb="@drawable/progress_drawable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <!-- TextView at the starting -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_000" />

                    <!-- Empty space to distribute the TextViews -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <!-- TextView at the end -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100_000" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/tenure" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_months"
                        android:id="@+id/loan_tenure"
                        android:textColor="@color/color_nira" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/tenure_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="3"
                    android:max="12"
                    android:progressTint="#D74879"
                    android:thumb="@drawable/progress_drawable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <!-- TextView at the starting -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3" />

                    <!-- Empty space to distribute the TextViews -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <!-- TextView at the end -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/interest_rate" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:id="@+id/loan_rate"
                        android:textColor="#D74879" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/rate_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="2"
                    android:max="15"
                    android:progressTint="#D74879"
                    android:thumb="@drawable/progress_drawable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <!-- TextView at the starting -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two" />

                    <!-- Empty space to distribute the TextViews -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <!-- TextView at the end -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_15" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <!-- TextView at the starting -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emi_month"
                        android:textSize="@dimen/sixteenTextSize"
                        android:textStyle="bold" />

                    <!-- Empty space to distribute the TextViews -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <!-- TextView at the end -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1672_23"
                        android:id="@+id/emi_amount"
                        android:textColor="@color/color_nira"
                        android:textSize="@dimen/sixteenTextSize" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/emi_proceed"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/color_nira"
            android:text="@string/proceed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>