<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:text="@string/existing_loans"
                        android:textAllCaps="true"
                        android:textSize="@dimen/appBarTextSize"
                        android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCDCDC"
            app:dividerThickness="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_emi_available_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noDataImg"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/noemi"
                app:tint="#A6A2A2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/noDataImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="#FFA6A2A2"
                android:text="@string/no_loans_added"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ongoing_emi_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:foregroundGravity="top"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/addNewLoan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/landing_screen_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <Button
            android:id="@+id/addNewLoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/color_nira"
            android:text="@string/add_a_new_loan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>